--- a/document.html
+++ b/document.html
@@ -1298,7 +1298,7 @@
                             <img class="img-fluid rounded" src="./assets/svg/graphic-stamp-paper.svg" alt="">
                         </div>
                         <div class="card-body p-2 overflow-auto h-75"
-                            style="text-align: justify;text-justify: inter-word;" id="deed_body">
+                            style="color: black;" id="deed_body">
                         </div>
                     </div>
 
