--- a/document.html
+++ b/document.html
@@ -1120,8 +1120,8 @@
                                         </div>
                                         <br>
                                         <div class="row">
-                                            <div class="col-md-7">
-                                                <h3 class="mb-4 text-start">Witness Details</h3>
+                                            <div class="col-md-7 d-flex align-items-end">
+                                                <h3 class="mb-4 text-start">Witness Details</h3><small class="mb-4">(optional)</small>
                                             </div>
                                             <div class="col-md-5">
                                                 <button type="button" class="btn btn-primary float-md-end d-none"
