--- a/document.html
+++ b/document.html
@@ -457,7 +457,7 @@
                                             </div>
                                             <div class="col-md-4 mb-3">
                                                 <div class="form-floating">
-                                                    <input type="date" class="form-control" name=""
+                                                    <input type="datetime-local" class="form-control" name=""
                                                         id="inputSaleDeedExecution" deed_id="deed_execution"
                                                         placeholder="Enter Deed Execution" />
                                                     <label style="font-size: smaller;" for="inputSaleDeedExecution">Deed
@@ -903,7 +903,7 @@
                                             <div id="append_purchaser_clone" class="col-md-12 mb-3">
                                                 <div id="showPurchaserCompanyToggler" class="mb-3 d-flex justify-content-around ">
                                                     <button id="show_company_details" class="btn btn-primary">Company Details</button>
-                                                    <button id="show_purchaser_details" class="btn btn-primary"> Vendor Details </button>
+                                                    <button id="show_purchaser_details" class="btn btn-primary"> Purchaser Details </button>
                                                 </div>
                                                 <div id="company_info_purchaser" class="row">
                                                     <div class="d-flex justify-content-between mb-3">
@@ -1371,7 +1371,7 @@
                                                         <textarea class="property_details form-control"
                                                             name="inputPropertyDetails[]" id="" cols="30"
                                                             rows="10"></textarea>
-                                                        <label for="inputPropertyDetails">Property Details</label>
+                                                        <label for="inputPropertyDetails">Schedule Details</label>
                                                     </div>
                                                 </div>
                                             </div>
