--- a/document.html
+++ b/document.html
@@ -548,7 +548,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="row inputVendorInfo d-none">
-                                                    <div class="d-flex justify-content-between">
+                                                    <h3 class="mb-4">Vendor</h3>
+                                                    <div class="d-flex justify-content-end mb-3">
                                                         <div>
                                                             <button type="button" id="vendorInfoCloneClear"
                                                             class="btn btn-dark me-2">Clear</button>
@@ -1001,7 +1002,8 @@
 
                                                 </div>
                                                 <div class="row inputPurchaserInfo">
-                                                    <div class="d-flex justify-content-between">
+                                                    <h3 class="mb-4">Purchaser</h3>
+                                                    <div class="d-flex justify-content-end mb-3">
                                                         <div>
                                                             <button type="button" id="purchaserInfoCloneClear"
                                                             class="btn btn-dark me-2">Clear</button>
