--- a/document.html
+++ b/document.html
@@ -1424,24 +1424,6 @@
                                                         <label for="inputPropertyType">Property</label>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-12 mb-3">
-                                                    <div class="row ps-3 pe-3">
-                                                        <div class="form-floating col-md p-0 pe-2"
-                                                            id="inputPropertyTaxNoDiv">
-                                                            <input class="form-control mt-2 mb-2 m-md-0" name=""
-                                                                id="inputPropertyTaxNo" type="number"
-                                                                placeholder="Property Tax no" />
-                                                            <label for="inputPropertyTaxNo">Property Tax no</label>
-                                                        </div>
-                                                        <div class="form-floating col-md p-0 pe-2"
-                                                            id="inputElecServiceNo">
-                                                            <input class="form-control" name="" id="inputElecServiceNo"
-                                                                type="number" placeholder="Electricity Service No" />
-                                                            <label for="inputElecServiceNo">Electricity Service
-                                                                No</label>
-                                                        </div>
-                                                    </div>
-                                                </div>
                                             </div>
                                             <br>
                                             <div class="col-md-12 row">
@@ -1475,9 +1457,27 @@
                                                 <div class="col-md-12 mb-3">
                                                     <div class="form-floating" id="inputSchedulePropDiv">
                                                         <select class="form-select" name="" id="inputScheduleProp">
-                                                            <option value="">ScheduleProp Type</option>
+                                                            <option value="">Select Schedule</option>
                                                         </select>
-                                                        <label for="inputScheduleProp">ScheduleProp</label>
+                                                        <label for="inputScheduleProp">Select Schedule</label>
+                                                    </div>
+                                                </div>
+                                            </div>                                            
+                                            <div class="col-md-12 mb-3">
+                                                <div class="row ps-3 pe-3">
+                                                    <div class="form-floating col-md p-0 pe-2"
+                                                        id="inputPropertyTaxNoDiv">
+                                                        <input class="form-control mt-2 mb-2 m-md-0" name=""
+                                                            id="inputPropertyTaxNo" type="number"
+                                                            placeholder="Property Tax no" />
+                                                        <label for="inputPropertyTaxNo">Property Tax no</label>
+                                                    </div>
+                                                    <div class="form-floating col-md p-0"
+                                                        id="inputElecServiceNo">
+                                                        <input class="form-control" name="" id="inputElecServiceNo"
+                                                            type="number" placeholder="Electricity Service No" />
+                                                        <label for="inputElecServiceNo">Electricity Service
+                                                            No</label>
                                                     </div>
                                                 </div>
                                             </div>
