--- a/document.html
+++ b/document.html
@@ -504,6 +504,7 @@
                                                                 class="add btn btn-primary">Add</button>
                                                         </div>
                                                     </div>
+                                                    <p class="text-center vendorCompanyTooltip">Please enter company Details </p>
                                                     <div class="col-md-3 mb-3">
                                                         <div class="form-floating" id="inputVendorCompanyNameDiv">
                                                             <input type="text" save_id="DocumentVendorCompanyName"
@@ -965,6 +966,7 @@
                                                                 class="add btn btn-primary">Add</button>
                                                         </div>
                                                     </div>
+                                                    <p class="text-center pruchaserCompanyTooltip">Please enter company Details </p>
                                                     <div class="col-md-3 mb-3">
                                                         <div class="form-floating" id="inputPurchaserCompanyNameDiv">
                                                             <input type="text" save_id="DocumentPurchaserCompanyName"
