--- a/document.html
+++ b/document.html
@@ -491,7 +491,7 @@
                                                     <button id="show_company_details" class="btn btn-primary">Company
                                                         Details</button>
                                                     <button id="show_vendor_details" class="btn btn-outline-primary"
-                                                        disabled> Vendor
+                                                    > Vendor
                                                         Details </button>
                                                 </div>
                                                 <div id="company_info_vendor" class="row">
@@ -504,7 +504,6 @@
                                                                 class="add btn btn-primary">Add</button>
                                                         </div>
                                                     </div>
-                                                    <p class="text-center vendorCompanyTooltip">Please enter company Details </p>
                                                     <div class="col-md-3 mb-3">
                                                         <div class="form-floating" id="inputVendorCompanyNameDiv">
                                                             <input type="text" save_id="DocumentVendorCompanyName"
@@ -953,7 +952,7 @@
                                                     <button id="show_company_details" class="btn btn-primary">Company
                                                         Details</button>
                                                     <button id="show_purchaser_details" class="btn btn-outline-primary"
-                                                        disabled>
+                                                        >
                                                         Purchaser Details </button>
                                                 </div>
                                                 <div id="company_info_purchaser" class="row">
@@ -966,7 +965,6 @@
                                                                 class="add btn btn-primary">Add</button>
                                                         </div>
                                                     </div>
-                                                    <p class="text-center pruchaserCompanyTooltip">Please enter company Details </p>
                                                     <div class="col-md-3 mb-3">
                                                         <div class="form-floating" id="inputPurchaserCompanyNameDiv">
                                                             <input type="text" save_id="DocumentPurchaserCompanyName"
@@ -995,7 +993,7 @@
                                                                 Address</label>
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-12 mb-3">
+                                                    <div class="col-md-12 mb-3 overflow-auto">
                                                         <table id="purchaserCompanyTable" class="table">
                                                             <thead>
                                                                 <tr>
@@ -1560,10 +1558,10 @@
                                                     <h3 class="mb-4 text-start">Witness Details</h3>
                                                 </div>
                                                 <div class="col-md-5">
-                                                    <button type="button" class="btn btn-dark float-md-end ms-2"
-                                                        id="witnessInfoCloneClear">Clear</button>
                                                     <button type="button" class="btn btn-primary float-md-end"
                                                         id="witnessInfoClone">Add</button>
+                                                    <button type="button" class="btn btn-dark float-md-end me-2"
+                                                        id="witnessInfoCloneClear">Clear</button>
                                                 </div>
                                             </div>
                                             <div class="col-md-12 row inputWitnessInfo">
