--- a/document.html
+++ b/document.html
@@ -920,7 +920,7 @@
                                                             <thead>
                                                                 <tr>
                                                                     <th scope="col">#</th>
-                                                                    <th scope="col">Name</th>
+                                                                    <th scope="col">Rep by</th>
                                                                     <th scope="col">Company</th>
                                                                     <th scope="col">Role</th>
                                                                     <th scope="col">Action</th>
@@ -1418,7 +1418,7 @@
                                                             <thead>
                                                                 <tr>
                                                                     <th scope="col">#</th>
-                                                                    <th scope="col">Name</th>
+                                                                    <th scope="col">Rep by</th>
                                                                     <th scope="col">Company</th>
                                                                     <th scope="col">Role</th>
                                                                     <th scope="col">Action</th>
