--- a/document.html
+++ b/document.html
@@ -920,7 +920,7 @@
                                                             <thead>
                                                                 <tr>
                                                                     <th scope="col">#</th>
-                                                                    <th scope="col">Rep by</th>
+                                                                    <th scope="col">Name</th>
                                                                     <th scope="col">Company</th>
                                                                     <th scope="col">Role</th>
                                                                     <th scope="col">Action</th>
@@ -970,7 +970,7 @@
                                                     <label for="inputPurchaserType">Purchaser Type</label>
                                                 </div>
                                             </div>
-                                            <div id="append_purchaser_clone" class="col-md-12 mb-3">
+                                            <div id="append_purchaser_clone" class="col-md-12 mb-3 d-none">
                                                 <div id="showPurchaserCompanyToggler"
                                                     class="mb-3 d-flex justify-content-around ">
                                                     <button id="show_company_details" class="btn btn-primary">Company
@@ -1418,7 +1418,7 @@
                                                             <thead>
                                                                 <tr>
                                                                     <th scope="col">#</th>
-                                                                    <th scope="col">Rep by</th>
+                                                                    <th scope="col">Name</th>
                                                                     <th scope="col">Company</th>
                                                                     <th scope="col">Role</th>
                                                                     <th scope="col">Action</th>
