--- a/document.html
+++ b/document.html
@@ -1537,7 +1537,7 @@
                                             <div class="col-md-12 row">
                                                 <div class="mb-3">
                                                     <div class="form-floating col-md" id="inputPropertyPriceDiv">
-                                                        <input class="form-control" deed_id="" name=""
+                                                        <input class="form-control" name=""
                                                             id="inputPropertyPrice" type="number" placeholder="Price" />
                                                         <label for="inputPropertyPrice">Price</label>
                                                     </div>
