--- a/document.html
+++ b/document.html
@@ -43,6 +43,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://unpkg.com/showdown@2.1.0/dist/showdown.min.js"></script>
 </head>
 
 <body class="  ">
